--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -181,7 +181,9 @@ header { padding-bottom: 22px; }
 =================================*/
 /* banner section start */
 .banner .wrapper {
+  width: 86%;
   position: relative;
+  padding: 43px 0;
 }
 
 .box-1 {
@@ -204,15 +206,33 @@ header { padding-bottom: 22px; }
 .box-2 {
   width: 60%;
   padding: 58px 0;
-  font-size: 14px;
+  position: absolute;
+  top: 20%;
+  right: 6.3%;
   background: rgb(95,178,222);
   color: rgb(255,255,255);
+  font-size: 14px;
   text-align: center;
   line-height: 1.8;
 }
 
 .box-2 p { padding: 70px 20%; }
 
+/* .box-3 {
+  display: flex;
+  width: 40%;
+  padding: 30px 0;
+  border: 8px solid rgb(0,0,0);
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: rotate(120deg) skewX(0deg);
+} */
+
+.box-3 span { 
+  display: inline-block;
+  text-indent: -9999px
+}
 /* banner section end */
 
 
