--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -331,7 +331,93 @@ header { padding-bottom: 22px; }
   color: rgb(0,0,0);
 }
 
+.booking-image img {
+  height: 100%;
+  object-fit: cover;
+}
 /* booking section end */
+
+/* article section start */
+.article .wrapper {
+  width: 92%;
+}
+.section-heading {
+  padding: 30px 0;
+  text-align: center;
+}
+
+.section-heading h4 {
+  padding-bottom: 17px;
+  position: relative;
+  color: rgb(162,162,162);
+  font-size: 25px;
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+}
+
+.section-heading h4::before {
+  content: '';
+  width: 5%;
+  height: 3px;
+  background: rgb(95,178,222);
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%,-50%);
+
+}
+
+.article-container {
+  display: flex;
+  gap: 30px;
+}
+
+.article-items {
+  height: 500px;
+  border-left: 1px solid rgb(188,189,189);
+  flex-basis: 30%;
+  display: flex;
+  flex-direction: column;
+  overflow-y: scroll;
+  gap: 30px;
+}
+
+.article-list {
+  position: relative;
+  padding: 20px 17px;
+  margin: 0 9%;
+  border: 1px solid rgb(0,0,0);
+}
+
+.article-list::before {
+  content: '';
+  width: 20px;
+  height: 20px;
+  border: 2px solid rgb(255,255,255);
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: -38px;
+  transform: translate(-50%,-50%);
+  background: rgb(162,162,162);
+}
+
+.article-details {
+  flex-basis: 60%;
+}
+
+.article-items::-webkit-scrollbar
+{
+	width: 4px;
+	background-color: #F5F5F5;
+}
+
+.article-items::-webkit-scrollbar-thumb
+{
+	background-color: rgb(209, 209, 209);
+}
+/* article section end */
 
 
 
